# Qanary

./: .gitignore  CHANGELOG.md  CONTEXT.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: release.yml
docs/: TODO.md  design-system.md
docs/adr/: 0001-github-releases-and-self-update.md  0002-configurable-wan-ip-providers.md  0003-list-icon-field-and-kind-default.md  0004-persist-list-collapsed-state.md  0005-optimistic-checking-snapshot.md  0006-canary-design-system.md  0007-critical-list-notifications.md  0008-tray-icon-runtime-severity-light.md  0009-changelog-dock-autostart.md  0010-drag-drop-reordering.md  0013-frontend-test-harness.md  0014-per-service-probe-tasks-status-deltas.md  0015-background-interval-visibility-self-update-check.md  0016-multi-version-changelog-list-contract-accordion.md  0017-list-criticality-probe-intervals.md  0018-network-change-triggered-refresh.md  0019-config-export-import-migration.md  0020-wildcard-endpoint-probing.md  0021-wildcard-tcp-only-reachable-state.md
e2e/: app.spec.ts  fixtures.ts
src/: App.css  App.test.tsx  App.tsx  api.ts  main.tsx  theme.ts  tokens.css  types.ts  update.test.ts  update.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  netwatch.rs  probe.rs  scheduler.rs  state.rs  store.rs  tray.rs  wan.rs
src/components/: AddServiceForm.tsx  AddServiceModal.tsx  Canary.tsx  ChangelogModal.tsx  Header.tsx  Icon.tsx  ListModal.tsx  ServiceList.tsx  ServiceModal.tsx  ServiceRow.tsx  Settings.tsx  StatusHero.tsx  Switch.tsx
src/test/: setup.ts
src/utils/: alerts.test.ts  alerts.ts  mergeDelta.test.ts  mergeDelta.ts  notify.ts  parseHost.test.ts  parseHost.ts  parseServices.test.ts  parseServices.ts  transitions.test.ts  transitions.ts  updateCheck.test.ts  updateCheck.ts
