[package]
name = "qanary"
version = "0.3.0"
description = "Qanary — connectivity monitor"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qanary_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Async runtime for the background probe loop + TCP connects with timeouts.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
# HTTPS HEAD probes. rustls (no OpenSSL) keeps the build portable across OSes.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# Stable unique ids for services and lists.
uuid = { version = "1", features = ["v4", "serde"] }

