[package]
name = "qanary"
version = "0.5.3"
description = "Qanary — connectivity monitor"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qanary_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
# Launch-on-login support (macOS LaunchAgent).
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Async runtime for the background probe loop + TCP connects with timeouts.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
# HTTPS HEAD probes. rustls (no OpenSSL) keeps the build portable across OSes.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# Stable unique ids for services and lists.
uuid = { version = "1", features = ["v4", "serde"] }
# Network-change watcher: interface/route events → immediate probe trigger (ADR-0018).
# if-watch: event-driven on Linux/Windows; ~10s poll backstop on macOS.
if-watch = { version = "3", features = ["tokio"] }
# StreamExt::next() + pin_mut! for the if-watch Stream.
# futures-util 0.3.32 already in Cargo.lock (transitive dep) — no network needed.
futures-util = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
# SCDynamicStore: event-driven macOS interface + route watcher, <1s latency (ADR-0018).
system-configuration = "0.6"
# CFRunLoop, CFString, CFArray — used with system_configuration in netwatch.rs.
core-foundation = "0.9"

